platform/deployment/kustomize/incident-bot/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incidentxbot
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: incidentxbot
